--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,4 +1,4 @@
-# Use full Node for builds
+# Use full Node for building steps
 FROM node:20 as base
 
 ####################
@@ -6,12 +6,11 @@ FROM node:20 as base
 ####################
 FROM base as deps
 
-# Step recommended by Next - https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed
-# RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 COPY package-lock.json .
 COPY package.json .
+
 RUN npm ci
 
 
@@ -19,9 +18,12 @@ RUN npm ci
 # BUILD STAGE #
 ###############
 FROM base as builder
+
 WORKDIR /app
+
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+
 RUN npm run build
 
 
@@ -31,11 +33,12 @@ RUN npm run build
 
 # Use slim Node for deploy
 FROM node:20-alpine as runner
-WORKDIR /app
-ENV NODE_ENV production
-# Uncomment the following line in case you want to disable telemetry during runtime.
-# ENV NEXT_TELEMETRY_DISABLED 1
 
+WORKDIR /app
+
+ENV NODE_ENV production
+
+# Create non-root user
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
@@ -53,10 +56,6 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 USER nextjs
 
 EXPOSE 3000
-
-ENV PORT 3000
-# set hostname to localhost
-ENV HOSTNAME "0.0.0.0"
 
 # server.js is created by next build from the standalone output
 # https://nextjs.org/docs/pages/api-reference/next-config-js/output
