--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,9 @@ version: '3.9'
 services:
   nextapp:
     container_name: nextapp
-    image: nextapp
-    build: .
+    build:
+      context: .
+      dockerfile: ./docker/app/Dockerfile
     env_file:
       - .env
     ports:
